--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img class="logo" src="img/10001.png" alt="AUCA Logo">  
             <form action="your-sign-in-endpoint" method="post">  
                 <h3 class="log">Login</h3>  
-                <p>Welcome! Please enter your details.</p>  
+                <p class="welcome">Welcome! Please enter your details.</p>  
                 <label for="email">Enter your Email or ID</label>  
                 <input id="email" class="carre" type="text" placeholder="Enter your Email or ID" required>  
                 <label for="password">Password</label>  
@@ -28,7 +28,7 @@
             </form>  
         </div>  
         <div class="right-side">  
-            <img src="img/10002.jpg" alt="Campus Photo">  
+            <img src="img/10002.png" alt="Campus Photo">  
         </div>  
     </div>  
 </body>  
