--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </form>  
         </div>  
         <div class="right-side">  
-            <img src="img/10002.png" alt="Campus Photo">  
+            <img src="img/10002.jpg" alt="Campus Photo">  
         </div>  
     </div>  
 </body>  
