Put the button in the middle

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="checkbox" type="checkbox"> I am a staff  
                     </label>  
                 </div>  
-                <button class="p" type="submit">Sign In</button>  
+                <div class="button-contener"><button class="p" type="submit">Sign In</button></div>  
                 <p class="signup">Don't have an account? <a href="#">Sign Up</a></p>  
             </form>  
         </div>  
