--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="checkbox" type="checkbox"> I am a staff  
                     </label>  
                 </div>  
-                <div class="button-contener"><a href="wel.html"></a><button class="p" type="submit">Sign In</button></div>  
+                <div class="button-contener"><a href="wel.html"><button class="p" type="submit">Sign In</button></a></div>  
                 <p class="signup">Don't have an account? <a href="#">Sign Up</a></p>  
             </form>  
         </div>  
