clear empty line

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <form action="your-sign-in-endpoint" method="post">  
                 <h3 class="log">Login</h3>  
                 <p class="welcome">Welcome! Please enter your details.</p>  
-                <label for="email">Enter your Email or ID</label>  
+                <label for="email">Enter your Emaill or ID</label>  
                 <input id="email" class="carre" type="text" placeholder="Enter your Email or ID" required>  
                 <label for="password">Password</label>  
                 <input id="password" class="carre" type="password" placeholder="Type your Password" required>  
