clear empty line

--- a/wel.html
+++ b/wel.html
@@ -71,7 +71,11 @@
     <title>Welcome to Auca</title>
 </head>
 <body>
-    <h2>Welcome to our Amazing Comminauty of Auca</h2>
-    <a href=""><button>Clict me</button></a>
+    <h2>Welcome to our Amazing Community of Auca</h2>
+    <p>We are thrilled to have you here. Explore, learn, and grow with us!</p>
+    <a href="index.html"><button>Click me</button></a>
+    <p style="font-style: italic; margin-top: 20px; animation: fadeIn 3s ease-in-out;">
+        "Together, we achieve greatness!"
+    </p>
 </body>
 </html>
