--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">  
         <div class="left-side">  
             <img class="logo" src="img/10001.png" alt="AUCA Logo">  
-            <form action="wel.html" method="post" target="_blank">  
+            <form action="your-sign-in-endpoint" method="post">  
                 <h3 class="log">Login</h3>  
                 <p class="welcome">Welcome! Please enter your details.</p>  
                 <label for="email">Enter your Email or ID</label>  
@@ -23,7 +23,7 @@
                         <input class="checkbox" type="checkbox"> I am a staff  
                     </label>  
                 </div>  
-                <a href="wel.html"></a><div class="button-contener"><button class="p" type="submit">Sign In</button></div></a>  
+                <a href="wel.html"><div class="button-contener"><button class="p" type="submit">Sign In</button></div></a>  
                 <p class="signup">Don't have an account? <a href="#">Sign Up</a></p>  
             </form>  
         </div>  
