clear empty line

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">  
         <div class="left-side">  
             <img class="logo" src="img/10001.png" alt="AUCA Logo">  
-            <form action="iii" method="post">  
+            <form action="" method="post">  
                 <h3 class="log">Login</h3>  
                 <p class="welcome">Welcome! Please enter your details.</p>  
                 <label for="email">Enter your Email or ID</label>  
