clear empty line

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="right-side">  
             <img src="img/10002.jpg" alt="Campus Photo">  
         </div>  
-    </div>  
+    </div>
+    <div class="border-botton"></div>  
 </body>  
 </html>
