--- a/wel.html
+++ b/wel.html
@@ -3,72 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
-            color: white;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            animation: slideIn 1.5s ease-out;
-        }
-
-        p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-            animation: fadeIn 2.5s ease-in-out;
-        }
-
-        button {
-            background-color: #ffffff;
-            color: #2575fc;
-            border: none;
-            padding: 10px 20px;
-            font-size: 1em;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s, background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #6a11cb;
-            color: white;
-            transform: scale(1.1);
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        @keyframes slideIn {
-            from {
-                transform: translateY(-50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-    </style>
     <title>Welcome to Auca</title>
+    <link rel="stylesheet" href="wel.css">
 </head>
 <body>
     <h2>Welcome to our Amazing Community of Auca</h2>
