clear empty line

--- a/wel.html
+++ b/wel.html
@@ -10,7 +10,7 @@
     <h2>Welcome to our Amazing Community of Auca</h2>
     <p>We are thrilled to have you here. Explore, learn, and grow with us!</p>
     <a href="index.html"><button>Click me</button></a>
-    <p style="font-style: italic; margin-top: 20px; animation: fadeIn 3s ease-in-out;">
+    <p class="together" style="font-style: italic; margin-top: 20px; animation: fadeIn 3s ease-in-out;">
         "Together, we achieve greatness!"
     </p>
 </body>
