clear empty line

--- a/wel.html
+++ b/wel.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="wel.css">
 </head>
 <body>
-    <h2>Welcome to our Amazing Community of Auca</h2>
+    <h2 class="Wel">Welcome to our Amazing Community of Auca</h2>
     <p>We are thrilled to have you here. Explore, learn, and grow with us!</p>
     <a href="index.html"><button>Click me</button></a>
     <p class="together">
