--- a/wel.html
+++ b/wel.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2 class="Wel">Welcome to our Amazing Community of Auca</h2>
-    <p>We are thrilled to have you here. Explore, learn, and grow with us!</p>
+    <p class="pro">We are thrilled to have you here. Explore, learn, and grow with us!</p>
     <a href="index.html"><button class="Botton">Click me</button></a>
     <p class="together">
         "Together, we achieve greatness!"
